First complete pass at refactoring to new instrumentaiton mode that makes no changes to method descriptors. Disabled control flow tracking from integration test suite for now. Need to merge in Java9+ instrumenter, check lambda correctness, do some performance optimziation, and then get back to control flow tracking. Also planned refactorings: Rename array classes, general code cleanup