@@ -1,7 +1,6 @@
 package edu.columbia.cs.psl.phosphor.runtime;
 
 import edu.columbia.cs.psl.phosphor.Configuration;
-import edu.columbia.cs.psl.phosphor.control.ControlFlowStack;
 import edu.columbia.cs.psl.phosphor.struct.*;
 
 public class RuntimeBoxUnboxPropagator {
@@ -32,7 +31,9 @@ public class RuntimeBoxUnboxPropagator {
         return 19;
     }
 
-    public static void getChars$$PHOSPHORTAGGED(long l, Taint lt, int idx, Taint idt, LazyCharArrayObjTags ta, Taint taTaint) {
+    public static void getChars(long l, int idx, char[] ar, PhosphorStackFrame phosphorStackFrame) {
+        LazyCharArrayObjTags ta = phosphorStackFrame.getArgWrapper(2, ar);
+        Taint lt = phosphorStackFrame.getArgTaint(0);
         Long.getChars(l, idx, ta.val);
         if(lt != null) {
             int nChars;
@@ -50,7 +51,9 @@ public class RuntimeBoxUnboxPropagator {
         }
     }
 
-    public static void getChars$$PHOSPHORTAGGED(int i, Taint it, int idx, Taint idt, LazyCharArrayObjTags ta, Taint taTaint) {
+    public static void getChars(int i, int idx, char[] ar, PhosphorStackFrame phosphorStackFrame) {
+        LazyCharArrayObjTags ta = phosphorStackFrame.getArgWrapper(2, ar);
+        Taint it = phosphorStackFrame.getArgTaint(0);
         Integer.getChars(i, idx, ta.val);
         if(it != null) {
             int nChars;
@@ -68,713 +71,497 @@ public class RuntimeBoxUnboxPropagator {
         }
     }
 
-    public static void getChars$$PHOSPHORTAGGED(long l, Taint lt, int idx, Taint idt, LazyCharArrayObjTags ta, Taint taTaint, ControlFlowStack ctrl) {
-        getChars$$PHOSPHORTAGGED(l, lt, idx, idt, ta, taTaint);
-    }
-
-    public static void getChars$$PHOSPHORTAGGED(int i, Taint it, int idx, Taint idt, LazyCharArrayObjTags ta, Taint taTaint, ControlFlowStack ctrl) {
-        getChars$$PHOSPHORTAGGED(i, it, idx, idt, ta, taTaint);
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(byte i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(byte i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Byte.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Byte.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Byte.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Byte.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(char i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(char i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Character.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Character.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Character.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Character.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(int i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(int i, Taint t, int r, Taint t2, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(int i,  int r, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toString(i, r);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toString(i, r);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toString(i, r).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toUnsignedString(int i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toUnsignedString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toUnsignedString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toUnsignedString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toUnsignedString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(Taint t, int i, Taint tr, int r, TaintedReferenceWithObjTag ret, String e) {
+    public static String toUnsignedString( int i,  int r, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toUnsignedString(i, r);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toUnsignedString(i, r);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toUnsignedString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toUnsignedString(i, r).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toOctalString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toOctalString(int i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toOctalString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toOctalString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toOctalString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toOctalString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toHexString(int i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toHexString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toHexString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toHexString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(short i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(short i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Short.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Short.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(boolean i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(boolean i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Boolean.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Boolean.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Boolean.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Boolean.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(float i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(float i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Float.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Float.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Float.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Float.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(float i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toHexString(float i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Float.toHexString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Float.toHexString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Float.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Float.toHexString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(double i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(double i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Double.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Double.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Double.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Double.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(double i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toHexString(double i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Double.toHexString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Double.toHexString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Double.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Double.toHexString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(long i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(long i, Taint t, int r, Taint t2, TaintedReferenceWithObjTag ret, String e) {
+    public static String toString(long i,  int r, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toString(i, r);
-            ret.taint = Taint.emptyTaint();
+            ret= Long.toString(i, r);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toString(i, r).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toBinaryString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toBinaryString(long i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toBinaryString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toBinaryString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toBinaryString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toBinaryString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toBinaryString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toBinaryString(int i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Integer.toBinaryString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Integer.toBinaryString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Integer.toBinaryString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Integer.toBinaryString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toBinaryString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        return toBinaryString$$PHOSPHORTAGGED(i, t, ret, e);
-    }
-
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toHexString(long i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toHexString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toHexString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toHexString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static String toUnsignedString(long i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toUnsignedString(i);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toUnsignedString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toUnsignedString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toUnsignedString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(long i, Taint t, int r, Taint tr, TaintedReferenceWithObjTag ret, String e) {
+    public static String toUnsignedString(long i,  int r, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toUnsignedString(i, r);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toUnsignedString(i, r);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toUnsignedString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toUnsignedString(i, r).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(long i, Taint t, int r, Taint tr, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
+    public static String toOctalString(long i, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
+        String ret;
         if(t == null) {
-            ret.val = Long.toUnsignedString(i, r);
-            ret.taint = Taint.emptyTaint();
+            ret = Long.toOctalString(i);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
         }
-        ret.val = new String(Long.toUnsignedString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
+        ret = new String(Long.toOctalString(i).toCharArray());
+        ret.setPHOSPHOR_TAG(t);
+        phosphorStackFrame.setReturnTaint(t);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toOctalString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, String e) {
+    public static int digit(char c,  int radix,  PhosphorStackFrame phosphorStackFrame) {
+        int ret = Character.digit(c, radix);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
+        return ret;
+    }
+
+    public static int digit(int codePoint,  int radix,  PhosphorStackFrame phosphorStackFrame) {
+        int ret = Character.digit(codePoint, radix);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
+        return ret;
+    }
+
+    public static Long valueOf(long l, PhosphorStackFrame phosphorStackFrame) {
+        Taint t = phosphorStackFrame.getArgTaint(0);
         if(t == null) {
-            ret.val = Long.toOctalString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toOctalString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(byte i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Byte.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Byte.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(char i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Character.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Character.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Integer.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Integer.toUnsignedString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toUnsignedString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(int i, Taint t, int r, Taint tr, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Integer.toUnsignedString(i, r);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toUnsignedString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toOctalString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Integer.toOctalString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toOctalString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(int i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Integer.toHexString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(short i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Short.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Integer.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(boolean i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Boolean.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Boolean.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(float i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Float.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Float.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(float i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Float.toHexString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Float.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(double i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        Double.toString$$PHOSPHORTAGGED(i, t, ret, ctrl, e);
-        ret.val = new String(((LazyCharArrayObjTags) ret.val), Taint.emptyTaint(), ctrl);
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(double i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Double.toHexString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Double.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Long.toString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(long i, Taint t, int r, Taint t2, ControlFlowStack ctrl, TaintedReferenceWithObjTag ret, String e) {
-        if(t == null) {
-            ret.val = Long.toString(i, r);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toString(i, r).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toBinaryString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Long.toBinaryString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toBinaryString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toHexString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Long.toHexString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toHexString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toUnsignedString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Long.toUnsignedString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toUnsignedString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag toOctalString$$PHOSPHORTAGGED(long i, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, String e) {
-        if(t == null) {
-            ret.val = Long.toOctalString(i);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        }
-        ret.val = new String(Long.toOctalString(i).toCharArray());
-        ((String) ret.val).setPHOSPHOR_TAG(t);
-        ret.taint = t;
-        return ret;
-    }
-
-    public static TaintedIntWithObjTag digit$$PHOSPHORTAGGED(char c, Taint cTaint, int radix, Taint rTaint, TaintedIntWithObjTag ret) {
-        ret.val = Character.digit(c, radix);
-        if(cTaint != null) {
-            ret.taint = cTaint;
-        }
-        return ret;
-    }
-
-    public static TaintedIntWithObjTag digit$$PHOSPHORTAGGED(int codePoint, Taint cTaint, int radix, Taint rTaint, TaintedIntWithObjTag ret) {
-        ret.val = Character.digit(codePoint, radix);
-        if(cTaint != null) {
-            ret.taint = cTaint;
-        }
-        return ret;
-    }
-
-    public static TaintedReferenceWithObjTag valueOf(long l, Taint t, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl) {
-        if(t == null) {
-            Long.valueOf$$PHOSPHORTAGGED(l, t, ret, ctrl, null);
-            ret.taint = Taint.emptyTaint();
-            return ret;
-        } else {
-            ret.val = new Long(l, t, ctrl);
-            ret.taint = t;
-            ((TaintedWithObjTag) (ret.val)).setPHOSPHOR_TAG(t);
-            return ret;
-        }
-    }
-
-    public static TaintedReferenceWithObjTag valueOf(long l, Taint t, TaintedReferenceWithObjTag ret) {
-        if(t == null) {
-            Long.valueOf$$PHOSPHORTAGGED(l, t, ret, null);
-            ret.taint = Taint.emptyTaint();
+            Long ret = Long.valueOf(l);
+            phosphorStackFrame.setReturnTaint(Taint.emptyTaint());
             return ret;
 
         } else {
-            ret.val = new Long(l, t, null);
-            ret.taint = t;
-            ((TaintedWithObjTag) ret.val).setPHOSPHOR_TAG(t);
+            Long ret = new Long(l, t);
+            phosphorStackFrame.setReturnTaint(t);
             return ret;
         }
     }
 
-    public static TaintedReferenceWithObjTag valueOfZ$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Boolean e) {
-        ret.val = valueOfZ(s);
-        ret.taint = getCombinedTaint(s, taint);
+    public static Boolean valueOfZ(String s, PhosphorStackFrame phosphorStackFrame) {
+        Boolean ret = valueOfZ(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfB$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Byte e) {
-        ret.val = valueOfB(s);
-        // ret.taint = taint;
-        ret.taint = getCombinedTaint(s, taint);
+    public static Byte valueOfB(String s, PhosphorStackFrame phosphorStackFrame) {
+        Byte ret = valueOfB(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfS$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Short e) {
-        ret.val = valueOfS(s);
-        // ret.taint = taint;
-        ret.taint = getCombinedTaint(s, taint);
+    public static Short valueOfS(String s, PhosphorStackFrame phosphorStackFrame) {
+        Short ret = valueOfS(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfZ$$PHOSPHORTAGGED(boolean s, Taint taint, TaintedReferenceWithObjTag ret, Boolean e) {
-        ret.val = Boolean.valueOf(s);
-        ret.taint = taint;
+    public static Boolean valueOfZ(boolean s, PhosphorStackFrame phosphorStackFrame) {
+        Boolean ret = Boolean.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfB$$PHOSPHORTAGGED(byte s, Taint taint, TaintedReferenceWithObjTag ret, Byte e) {
-        ret.val = Byte.valueOf(s);
-        // ret.taint = taint;
-        ret.taint = taint;
+    public static Byte valueOfB(byte s, PhosphorStackFrame phosphorStackFrame) {
+        Byte ret = Byte.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
+        return ret;
+    }
+    public static Byte valueOfB(String s, int radix, PhosphorStackFrame phosphorStackFrame) {
+        Byte ret = Byte.valueOf(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(1)).union(phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfS$$PHOSPHORTAGGED(short s, Taint taint, TaintedReferenceWithObjTag ret, Short e) {
-        ret.val = Short.valueOf(s);
-        // ret.taint = taint;
-        ret.taint = taint;
+
+    public static Short valueOfS(short s, PhosphorStackFrame phosphorStackFrame) {
+        Short ret = Short.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfD$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Double e) {
-        ret.val = Double.valueOf(s);
-        ret.taint = getCombinedTaint(s, taint);
+    public static Double valueOfD(String s, PhosphorStackFrame phosphorStackFrame) {
+        Double ret = Double.valueOf(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfD$$PHOSPHORTAGGED(double s, Taint taint, TaintedReferenceWithObjTag ret, Double e) {
-        ret.val = Double.valueOf(s);
-        ret.taint = taint;
+    public static Double valueOfD(double s, PhosphorStackFrame phosphorStackFrame) {
+        Double ret = Double.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfI$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Integer e) {
-        ret.val = Integer.valueOf(s);
-        ret.taint = getCombinedTaint(s, taint);
+    public static Integer valueOfI(String s, PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.valueOf(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfI$$PHOSPHORTAGGED(String s, Taint taint, int radix, Taint radixTaint, TaintedReferenceWithObjTag ret, Integer e) {
-        ret.val = Integer.valueOf(s, radix);
-        ret.taint = getCombinedTaint(s, taint).union(radixTaint);
+    public static Integer valueOfI(String s,  int radix, PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.valueOf(s, radix);
+        Taint taint = phosphorStackFrame.getArgTaint(0);
+        Taint radixTaint = phosphorStackFrame.getArgTaint(1);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, taint).union(radixTaint));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfI$$PHOSPHORTAGGED(int s, Taint taint, TaintedReferenceWithObjTag ret, Integer erasedReturn) {
-        ret.val = Integer.valueOf(s);
-        ret.taint = taint;
+    public static Integer valueOfI(int s, PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfF$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Float erasedReturn) {
-        ret.val = Float.valueOf(s);
-        ret.taint = getCombinedTaint(s, taint);
+    public static Float valueOfF(String s, PhosphorStackFrame phosphorStackFrame) {
+        Float ret = Float.valueOf(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfF$$PHOSPHORTAGGED(float s, Taint taint, TaintedReferenceWithObjTag ret, Float erasedReturn) {
-        ret.val = Float.valueOf(s);
-        ret.taint = taint;
+    public static Float valueOfF(float s, PhosphorStackFrame phosphorStackFrame) {
+        Float ret = Float.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfJ$$PHOSPHORTAGGED(String s, Taint taint, TaintedReferenceWithObjTag ret, Long erasedReturn) {
-        ret.val = Long.valueOf(s);
-        ret.taint = getCombinedTaint(s, taint);
+    public static Long valueOfJ(String s, PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.valueOf(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfJ$$PHOSPHORTAGGED(long s, Taint taint, TaintedReferenceWithObjTag ret, Long erasedReturn) {
-        ret.val = Long.valueOf(s);
-        ret.taint = taint;
+    public static Long valueOfJ(long s, PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfJ$$PHOSPHORTAGGED(String s, Taint taint, int radix, Taint radixtaint, TaintedReferenceWithObjTag ret, Long erasedReturn) {
-        ret.val = Long.valueOf(s, radix);
-        ret.taint = getCombinedTaint(s, taint).union(radixtaint);
+    public static Long valueOfJ(String s,  int radix, PhosphorStackFrame phosphorStackFrame) {
+        Taint taint = phosphorStackFrame.getArgTaint(0);
+        Taint radixTaint = phosphorStackFrame.getArgTaint(1);
+        Long ret = Long.valueOf(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, taint).union(radixTaint));
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag valueOfC$$PHOSPHORTAGGED(char s, Taint taint, TaintedReferenceWithObjTag ret, Character erasedReturn) {
-        ret.val = Character.valueOf(s);
-        ret.taint = taint;
+    public static Character valueOfC(char s, PhosphorStackFrame phosphorStackFrame) {
+        Character ret = Character.valueOf(s);
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedBooleanWithObjTag booleanValue$$PHOSPHORTAGGED(Boolean v, Taint vTaint, TaintedBooleanWithObjTag ret) {
-        ret.val = v.booleanValue();
-        ret.taint = vTaint;
+    public static boolean booleanValue(Boolean v, PhosphorStackFrame phosphorStackFrame) {
+        boolean ret = v.booleanValue();
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedByteWithObjTag byteValue$$PHOSPHORTAGGED(Byte v, Taint vTaint, TaintedByteWithObjTag ret) {
-        ret.val = v.byteValue();
-        ret.taint = vTaint;
+    public static byte byteValue(Byte v, PhosphorStackFrame phosphorStackFrame) {
+        byte ret = v.byteValue();
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedCharWithObjTag charValue$$PHOSPHORTAGGED(Character v, Taint vTaint, TaintedCharWithObjTag ret) {
-        ret.val = v.charValue();
-        ret.taint = vTaint;
+    public static char charValue(Character v, PhosphorStackFrame phosphorStackFrame) {
+        char ret = v.charValue();
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedDoubleWithObjTag doubleValue$$PHOSPHORTAGGED(Double v, Taint vTaint, TaintedDoubleWithObjTag ret) {
-        ret.val = v.doubleValue();
-        ret.taint = vTaint;
+    public static double doubleValue(Double v, PhosphorStackFrame phosphorStackFrame) {
+        double ret = v.doubleValue();;
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedIntWithObjTag intValue$$PHOSPHORTAGGED(Integer v, Taint vTaint, TaintedIntWithObjTag ret) {
-        ret.val = v.intValue();
-        ret.taint = vTaint;
+    public static int intValue(Integer v, PhosphorStackFrame phosphorStackFrame) {
+        int ret = v.intValue();;
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedShortWithObjTag shortValue$$PHOSPHORTAGGED(Short v, Taint vTaint, TaintedShortWithObjTag ret) {
-        ret.val = v.shortValue();
-        ret.taint = vTaint;
+    public static short shortValue(Short v, PhosphorStackFrame phosphorStackFrame) {
+        short ret = v.shortValue();;
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedFloatWithObjTag floatValue$$PHOSPHORTAGGED(Float v, Taint vTaint, TaintedFloatWithObjTag ret) {
-        ret.val = v.floatValue();
-        ret.taint = vTaint;
+    public static float floatValue(Float v, PhosphorStackFrame phosphorStackFrame) {
+        float ret = v.floatValue();;
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
-    public static TaintedLongWithObjTag longValue$$PHOSPHORTAGGED(Long v, Taint vTaint, TaintedLongWithObjTag ret) {
-        ret.val = v.longValue();
-        ret.taint = vTaint;
+    public static long longValue(Long v, PhosphorStackFrame phosphorStackFrame) {
+        long ret = v.longValue();;
+        phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         return ret;
     }
 
@@ -791,320 +578,189 @@ public class RuntimeBoxUnboxPropagator {
     }
 
     @SuppressWarnings("unused")
-    public static TaintedReferenceWithObjTag valueOfB$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, Byte e) {
-        ret.val = Byte.parseByte(s, radix);
-        ret.taint = getCombinedTaint(s, tag).union(sTaint);
+    public static Short valueOfS(String s, int radix, PhosphorStackFrame phosphorStackFrame) {
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
+        Short ret = Short.parseShort(s, radix);
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedReferenceWithObjTag valueOfB$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint t, TaintedReferenceWithObjTag ret, Byte e) {
-        ret.val = Byte.parseByte(s, radix);
-        ret.taint = getCombinedTaint(s, t).union(sTaint);
+    public static boolean parseBoolean(String s, PhosphorStackFrame phosphorStackFrame) {
+        Boolean ret = Boolean.parseBoolean(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedReferenceWithObjTag valueOfS$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedReferenceWithObjTag ret, ControlFlowStack ctrl, Short e) {
-        ret.val = Short.parseShort(s, radix);
-        ret.taint = getCombinedTaint(s, tag).union(sTaint);
+    public static byte parseByte(String s, PhosphorStackFrame phosphorStackFrame) {
+        Byte ret = Byte.parseByte(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedReferenceWithObjTag valueOfS$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint t, TaintedReferenceWithObjTag ret, Short e) {
-        ret.taint = getCombinedTaint(s, sTaint);
-        ret.val = Short.parseShort(s, radix);
+    public static double parseDouble(String s, PhosphorStackFrame phosphorStackFrame) {
+        Double ret = Double.parseDouble(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedBooleanWithObjTag parseBoolean$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedBooleanWithObjTag ret) {
-        return parseBoolean$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedBooleanWithObjTag parseBoolean$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedBooleanWithObjTag ret) {
-        ret.val = Boolean.parseBoolean(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static float parseFloat(String s, PhosphorStackFrame phosphorStackFrame) {
+        Float ret = Float.parseFloat(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedByteWithObjTag parseByte$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedByteWithObjTag ret) {
-        return parseByte$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedByteWithObjTag parseByte$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedByteWithObjTag ret) {
-        ret.val = Byte.parseByte(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static int parseInt(String s, PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.parseInt(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedDoubleWithObjTag parseDouble$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedDoubleWithObjTag ret) {
-        return parseDouble$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedDoubleWithObjTag parseDouble$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedDoubleWithObjTag ret) {
-        ret.val = Double.parseDouble(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static long parseLong(String s, PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.parseLong(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedFloatWithObjTag parseFloat$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedFloatWithObjTag ret) {
-        return parseFloat$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedFloatWithObjTag parseFloat$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedFloatWithObjTag ret) {
-        ret.val = Float.parseFloat(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static short parseShort(String s, PhosphorStackFrame phosphorStackFrame) {
+        Short ret = Short.parseShort(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseInt$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedIntWithObjTag ret) {
-        return parseInt$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseInt$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedIntWithObjTag ret) {
-        ret.val = Integer.parseInt(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static int parseUnsignedInt(String s, PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.parseInt(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseLong$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedLongWithObjTag ret) {
-        return parseLong$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseLong$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedLongWithObjTag ret) {
-        ret.val = Long.parseLong(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static long parseUnsignedLong(String s, PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.parseLong(s);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedShortWithObjTag parseShort$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedShortWithObjTag ret) {
-        return parseShort$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedShortWithObjTag parseShort$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedShortWithObjTag ret) {
-        ret.val = Short.parseShort(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static byte parseByte(String s, int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Byte ret = Byte.parseByte(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseUnsignedInt$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedIntWithObjTag ret) {
-        return parseUnsignedInt$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseUnsignedInt$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedIntWithObjTag ret) {
-        ret.val = Integer.parseInt(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static int parseInt(String s, int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.parseInt(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseUnsignedLong$$PHOSPHORTAGGED(String s, Taint sTaint, ControlFlowStack ctrl, TaintedLongWithObjTag ret) {
-        return parseUnsignedLong$$PHOSPHORTAGGED(s, sTaint, ret);
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseUnsignedLong$$PHOSPHORTAGGED(String s, Taint sTaint, TaintedLongWithObjTag ret) {
-        ret.val = Long.parseLong(s);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static long parseLong(String s, int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.parseLong(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedByteWithObjTag parseByte$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedByteWithObjTag ret) {
-        try {
-            ret.val = Byte.parseByte(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedByteWithObjTag parseByte$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedByteWithObjTag ret) {
-        ret.val = Byte.parseByte(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static short parseShort(String s, int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Short ret = Short.parseShort(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseInt$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedIntWithObjTag ret) {
-        try {
-            ret.val = Integer.parseInt(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseInt$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedIntWithObjTag ret) {
-        ret.val = Integer.parseInt(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static int parseUnsignedInt(String s,  int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Integer ret = Integer.parseInt(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseLong$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedLongWithObjTag ret) {
-        try {
-            ret.val = Long.parseLong(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseLong$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedLongWithObjTag ret) {
-        ret.val = Long.parseLong(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
+    public static long parseUnsignedLong(String s,  int radix,  PhosphorStackFrame phosphorStackFrame) {
+        Long ret = Long.parseLong(s, radix);
+        phosphorStackFrame.setReturnTaint(getCombinedTaint(s, phosphorStackFrame.getArgTaint(0)));
         return ret;
     }
 
     @SuppressWarnings("unused")
-    public static TaintedShortWithObjTag parseShort$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedShortWithObjTag ret) {
-        try {
-            ret.val = Short.parseShort(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedShortWithObjTag parseShort$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedShortWithObjTag ret) {
-        ret.val = Short.parseShort(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
-        return ret;
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseUnsignedInt$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedIntWithObjTag ret) {
-        try {
-            ret.val = Integer.parseInt(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedIntWithObjTag parseUnsignedInt$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedIntWithObjTag ret) {
-        ret.val = Integer.parseInt(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
-        return ret;
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseUnsignedLong$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, ControlFlowStack ctrl, TaintedLongWithObjTag ret) {
-        try {
-            ret.val = Long.parseLong(s, radix);
-            ret.taint = getCombinedTaint(s, tag);
-            return ret;
-        } catch(NumberFormatException ex) {
-
-            throw ex;
-        }
-    }
-
-    @SuppressWarnings("unused")
-    public static TaintedLongWithObjTag parseUnsignedLong$$PHOSPHORTAGGED(String s, Taint sTaint, int radix, Taint<?> tag, TaintedLongWithObjTag ret) {
-        ret.val = Long.parseLong(s, radix);
-        ret.taint = getCombinedTaint(s, sTaint);
-        return ret;
-    }
-
-    @SuppressWarnings("unused")
-    public static <T> TaintedCharWithObjTag forDigit$$PHOSPHORTAGGED(int digit, Taint digitTag, int radix, Taint<T> radixTag,
-                                                                     TaintedCharWithObjTag ret) {
-        ret.val = Character.forDigit(digit, radix);
+    public static <T> char forDigit(int digit, int radix, PhosphorStackFrame phosphorStackFrame) {
+        char ret = Character.forDigit(digit, radix);
         if(Configuration.IMPLICIT_TRACKING || Configuration.IMPLICIT_LIGHT_TRACKING) {
-            ret.taint = Taint.combineTags(digitTag, radixTag);
+            phosphorStackFrame.setReturnTaint(Taint.combineTags(phosphorStackFrame.getArgTaint(0), phosphorStackFrame.getArgTaint(1)));
         } else {
-            ret.taint = digitTag;
+            phosphorStackFrame.setReturnTaint(phosphorStackFrame.getArgTaint(0));
         }
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Boolean value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Boolean value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Byte value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Byte value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Character value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Character value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Float value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Float value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Integer value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Integer value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Long value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Long value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Short value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Short value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
-    public static TaintedReferenceWithObjTag toString$$PHOSPHORTAGGED(Double value, Taint tag, TaintedReferenceWithObjTag ret, String e) {
-        ret.val = value.toString();
-        ((String) ret.val).setPHOSPHOR_TAG(tag);
-        ret.taint = tag;
+    public static String toString(Double value, PhosphorStackFrame phosphorStackFrame) {
+        String ret = value.toString();
+        Taint tag = phosphorStackFrame.getArgTaint(0);
+        ret.setPHOSPHOR_TAG(tag);
+        phosphorStackFrame.setReturnTaint(tag);
         return ret;
     }
 
